[gd_scene load_steps=2 format=3 uid="uid://cn64nc3puwj4m"]

[ext_resource type="Script" uid="uid://cvvlil5s3jb1f" path="res://scripts/dev/ItemCheatBar.gd" id="1"]

[node name="ItemsCheatBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Rows" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="ItemsRow" type="HBoxContainer" parent="Rows"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Rows/ItemsRow"]
layout_mode = 2
text = "Items:"

[node name="Picker" type="OptionButton" parent="Rows/ItemsRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Qty" type="SpinBox" parent="Rows/ItemsRow"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
min_value = 1.0
max_value = 999.0
value = 1.0

[node name="BtnGive" type="Button" parent="Rows/ItemsRow"]
layout_mode = 2
text = "Give"

[node name="BtnRemove" type="Button" parent="Rows/ItemsRow"]
layout_mode = 2
text = "Remove"

[node name="BtnGive10" type="Button" parent="Rows/ItemsRow"]
layout_mode = 2
text = "+10"

[node name="BtnReloadCSV" type="Button" parent="Rows/ItemsRow"]
layout_mode = 2
text = "Reload CSV (defs)"

[node name="SigilRow" type="HBoxContainer" parent="Rows"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Rows/SigilRow"]
layout_mode = 2
text = "Sigil Cheats:"

[node name="InstPicker" type="OptionButton" parent="Rows/SigilRow"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnLvUp" type="Button" parent="Rows/SigilRow"]
layout_mode = 2
text = "Lv +1"

[node name="BtnLvDown" type="Button" parent="Rows/SigilRow"]
layout_mode = 2
text = "Lv -1"

[node name="BtnXP25" type="Button" parent="Rows/SigilRow"]
layout_mode = 2
text = "XP +25"

[node name="BtnXP100" type="Button" parent="Rows/SigilRow"]
layout_mode = 2
text = "XP +100"

[node name="ChkEquipped" type="CheckBox" parent="Rows/SigilRow"]
layout_mode = 2
button_pressed = true
text = "Equipped only"

[node name="HeroRow" type="HBoxContainer" parent="Rows"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Rows/HeroRow"]
layout_mode = 2
text = "Hero / SXP Cheats:"

[node name="BtnLvlM1" type="Button" parent="Rows/HeroRow"]
layout_mode = 2
text = "Lv -1"

[node name="BtnLvlP1" type="Button" parent="Rows/HeroRow"]
layout_mode = 2
text = "Lv +1"

[node name="SpinLvl" type="SpinBox" parent="Rows/HeroRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="BtnSetLvl" type="Button" parent="Rows/HeroRow"]
layout_mode = 2
text = "Set Lv"

[node name="HSeparator" type="HSeparator" parent="Rows/HeroRow"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="BtnBPPp1" type="Button" parent="Rows/HeroRow"]
layout_mode = 2
text = "BPP +1"

[node name="BtnBPPp5" type="Button" parent="Rows/HeroRow"]
layout_mode = 2
text = "BPP +5"

[node name="HSeparator2" type="HSeparator" parent="Rows/HeroRow"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="StatPick" type="OptionButton" parent="Rows/HeroRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="SpinSXP" type="SpinBox" parent="Rows/HeroRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
min_value = 1.0
max_value = 999.0
value = 10.0

[node name="BtnAddSXP" type="Button" parent="Rows/HeroRow"]
layout_mode = 2
text = "Add SXP"

[node name="PartyRow" type="HBoxContainer" parent="Rows"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Rows/PartyRow"]
layout_mode = 2
text = "Party Cheats:"

[node name="RosterPick" type="OptionButton" parent="Rows/PartyRow"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="MemberId" type="LineEdit" parent="Rows/PartyRow"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
placeholder_text = "member id"

[node name="BtnAddParty" type="Button" parent="Rows/PartyRow"]
layout_mode = 2
text = "Add"

[node name="BtnRemoveParty" type="Button" parent="Rows/PartyRow"]
layout_mode = 2
text = "Remove"

[node name="BtnToBench" type="Button" parent="Rows/PartyRow"]
layout_mode = 2
text = "To Bench"
